# sovereign-agent-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  venues.txt
exercise3_rasa/: config.yml  domain.yml  pyproject.toml
exercise3_rasa/actions/: actions.py
exercise3_rasa/data/: nlu.yml  rules.yml
sovereign_agent/agents/: research_agent.py
sovereign_agent/tools/: mcp_venue_server.py  venue_tools.py
week1/: exercise2_langgraph.py  exercise4_mcp_client.py  grade.py
week1/answers/: ex1_answers.py  ex2_answers.py  ex3_answers.py  ex4_answers.py
week1/outputs/: ex2_results.json  ex4_results.json
